@@ -18,8 +18,7 @@ SCRIPTNAME=/etc/init.d/hyperv-daemons.hv-fcopy-daemon
 # Exit if the package is not installed
 [ -x "$DAEMON" ] || exit 0
 
-# Exit if we are not running under Hyper-V or the kernel device does not exist
-/lib/hyperv-daemons/check-hyperv || exit 0
+# Exit if the kernel device does not exist
 [ -e "/dev/vmbus/hv_fcopy" ] || exit 0
 
 # Load the VERBOSE setting and other rcS variables
