@@ -1,6 +1,5 @@
 [Unit]
 Description=Hyper-V file copy service (FCOPY) daemon
-ConditionVirtualization=microsoft
 ConditionPathExists=/dev/vmbus/hv_fcopy
 
 [Service]
