@@ -18,8 +18,8 @@ SCRIPTNAME=/etc/init.d/hyperv-daemons.hv-kvp-daemon
 # Exit if the package is not installed
 [ -x "$DAEMON" ] || exit 0
 
-# Exit if we are not running under Hyper-V
-/lib/hyperv-daemons/check-hyperv || exit 0
+# Exit if the kernel device does not exist
+[ -e "/dev/vmbus/hv_kvp" ] || exit 0
 
 # Load the VERBOSE setting and other rcS variables
 . /lib/init/vars.sh
