@@ -1,6 +1,6 @@
 [Unit]
 Description=Hyper-V volume shadow copy service (VSS) daemon
-ConditionVirtualization=microsoft
+ConditionPathExists=/dev/vmbus/hv_vss
 
 [Service]
 ExecStart=/usr/sbin/hv_vss_daemon -n
