@@ -14,9 +14,4 @@ installdir = /usr/sbin
 
 include $(top_rulesdir)/Makefile.inc
 
-# Handle check-hyperv separately since it's installed in a different directory
-all-local: check-hyperv
-install-local:
-	install -D -m755 check-hyperv '$(DESTDIR)/lib/hyperv-daemons/check-hyperv'
-
 endif
