@@ -10,6 +10,7 @@ linux (4.19~rc8-1~exp1) UNRELEASED; urgency=medium
   * debian/rules: Checksum only the source name and version from
     debian/changelog
   * Move generation of CONFIG_BUILD_SALT to gencontrol.py
+  * [x86] hyperv-daemons: Make all services conditional on device existence
 
   [ Karsten Merker ]
   * [riscv64] Build a kernel image and udebs for riscv64 (Closes: #908161)
